--- a/app/src/main/res/layout/activity_plan_list.xml
+++ b/app/src/main/res/layout/activity_plan_list.xml
@@ -1,132 +1,160 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!--content-->
-    <LinearLayout
-        android:id="@+id/linTopDetail"
-        android:orientation="vertical"
-        android:layout_marginLeft="@dimen/margin2"
-        android:layout_marginRight="@dimen/margin2"
-        android:layout_marginTop="@dimen/margin2"
+    <ImageView
+        android:src="@drawable/bg_blue"
+        android:scaleType="fitXY"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent" />
 
-        <TextView
-            android:id="@+id/txtPLDriverName"
-            android:text="Driver Name : "
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/h3"
-            android:layout_marginBottom="@dimen/margin1"
-            android:layout_weight="10"
-            />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/txtPLCarLicense"
-            android:text="Car license : "
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/h3"
-            android:layout_marginBottom="@dimen/margin1"
-            android:layout_weight="10"
-            />
+        <!--Toolbar-->
+        <include
+            android:id="@+id/toolbarPlanList"
+            layout="@layout/toolbar_main" />
 
-        <LinearLayout
-            android:orientation="horizontal"
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
-                android:text="Date : "
-                android:layout_width="wrap_content"
+            <!--content-->
+            <LinearLayout
+                android:background="@drawable/bg_board"
+                android:id="@+id/linTopDetail"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/h3"
-                android:layout_marginBottom="@dimen/margin1"
-                android:layout_weight="10"
-                />
+                android:layout_marginLeft="@dimen/margin2"
+                android:layout_marginRight="@dimen/margin2"
+                android:layout_marginTop="@dimen/margin2"
+                android:orientation="vertical">
 
-            <Button
-                android:id="@+id/btnPLOutboundDate"
-               android:text="00/00/0000"
-                android:layout_width="250dp"
-                android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/txtPLDriverName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="10"
 
-        </LinearLayout>
+                    android:background="@drawable/password_textfield"
+                    android:text="Driver Name : "
+                    android:textSize="@dimen/h3" />
 
-        <TextView
-            android:id="@+id/txtPLPlanCode"
-            android:text="Plan code : "
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/h3"
-            android:layout_marginBottom="@dimen/margin1"
-            android:layout_weight="10"
-            />
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/txtPLCarLicense"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/margin1"
+                    android:layout_weight="10"
+                    android:background="@drawable/user_textfield"
+                    android:text="Car license : "
+                    android:textSize="@dimen/h3" />
 
-    <LinearLayout
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-        android:id="@+id/linBelow"
-        android:layout_below="@+id/linTopDetail"
-        android:layout_marginLeft="@dimen/margin2"
-        android:layout_marginRight="@dimen/margin2"
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/margin1"
+                        android:text="Date : "
+                        android:textSize="@dimen/h3" />
 
-        android:orientation="vertical"
+                    <Spinner
+                        android:background="@drawable/password_textfield"
+                        android:id="@+id/spinnerPLOutboundDate"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+                </LinearLayout>
 
-        <Button
-            android:id="@+id/btnPLStartJob"
-            android:layout_marginLeft="@dimen/margin2"
-            android:layout_marginRight="@dimen/margin2"
-            android:text="Start job"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <Button
-            android:id="@+id/btnPLEndJob"
-            android:layout_marginLeft="@dimen/margin2"
-            android:layout_marginRight="@dimen/margin2"
-            android:text="End job"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/txtPLPlanCode"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/margin1"
+                    android:layout_weight="10"
+                    android:background="@drawable/password_textfield"
+                    android:text="Plan code : "
+                    android:textSize="@dimen/h3" />
+            </LinearLayout>
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            <LinearLayout
 
-            <TextView
-            android:text="Location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/h3"
-            android:layout_marginBottom="@dimen/margin1"
-            android:layout_weight="10"
-            />
-
-            <TextView
-                android:text="Time"
-                android:layout_width="wrap_content"
+                android:id="@+id/linBelow"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/h3"
-                android:layout_marginBottom="@dimen/margin1"
-                android:layout_weight="10"
-                />
-        </LinearLayout>
+                android:layout_below="@+id/linTopDetail"
 
-        <ListView
-            android:id="@+id/lvPLPlanList"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+                android:layout_marginLeft="@dimen/margin2"
+
+                android:layout_marginRight="@dimen/margin2"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/btnPLStartJob"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/margin2"
+                    android:layout_marginRight="@dimen/margin2"
+                    android:background="@drawable/bg_button"
+                    android:text="Start job"
+                    android:textColor="#ffffff" />
+
+                <Button
+                    android:id="@+id/btnPLEndJob"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/margin2"
+                    android:layout_marginRight="@dimen/margin2"
+                    android:background="@drawable/bg_button"
+                    android:text="End job"
+                    android:textColor="#ffffff" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/user_textfield"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="10"
+                        android:text="Location"
+                        android:textSize="@dimen/h3" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="10"
+                        android:text="Time"
+                        android:textSize="@dimen/h3" />
+                </LinearLayout>
+
+                <ListView
+                    android:id="@+id/lvPLPlanList"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_board">
 
 
-        </ListView>
+                </ListView>
+
+            </LinearLayout>
+
+
+        </RelativeLayout>
+
 
     </LinearLayout>
-
 
 
 </RelativeLayout>
